[tool.poetry]
name = "rollpig-cloud"
version = "0.2.0"
description = "Cloud storage service for nonebot-plugin-rollpig"
authors = ["Felis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.110.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
sqlalchemy = ">=2.0.29"
pymysql = ">=1.1.0"
cryptography = ">=42.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
